--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class="home" id="home">
         <div class="content">
             <h3>fresh and <span>organic</span> products for your</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic dolorem suscipit, autem rerum minima tempora exercitationem facilis inventore ex non, debitis facere accusantium, officia delectus iusto quam voluptatibus at fugiat.</p>
+            <p>Organic food, whether fresh produce or processed items, is grown without synthetic chemicals like pesticides and fertilizers. It also excludes genetically modified organisms (GMOs). The market for organic food has grown significantly, becoming a multibillion-dollar industry with distinct production, processing, distribution, and retail system</p>
             <a href="#" class="btn">shop now</a>
         </div>
     </section>
@@ -85,7 +85,7 @@
             <div class="box">
                 <img src="image/basket.jpg" alt="basket">
                 <h3>fresh and organic</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, impedit laudantium quo consequatur.</p>
+                <p>Fresh And Organic offers the finest selection of naturally grown produce, free from pesticides and artificial additives. Our commitment to sustainability ensures that every fruit, vegetable, and herb is cultivated with care for the environment, delivering wholesome, nutritious, and flavorful foods straight from farm to table..</p>
                 <a href="#" class="btn">read more</a>
             </div>
             <div class="box">
