--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="box">
                 <img src="image/delivery.jpg" alt="delivery">
                 <h3>free delivery</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, impedit laudantium quo consequatur.</p>
+                <p>"Enjoy the convenience of free delivery with every order. We bring your favorite products right to your doorstep at no extra cost. Whether it's groceries, household essentials, or personal care items, our reliable service ensures you get what you need quickly and effortlessly, saving you time and money."</p>
                 <a href="#" class="btn">read more</a>
             </div>
             <div class="box">
