--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="box">
                 <h3>contact info</h3>
                 <address class="contact-info">
-                    <a href="tel:+91 9354846463" class="links"> <i class="fas fa-phone"></i> +123-456-7890 </a>
+                    <a href="tel:+91 9354846463" class="links"> <i class="fas fa-phone"></i> +91 9354846463 </a>
                     <a href="mailto:mayanknirbaan@gmail.com" class="links"> <i class="fas fa-envelope"></i> mayanknirbaan@gmail.com </a>
                     <a href="#" class="links"> <i class="fas fa-map-marker-alt"></i> GURUGRAM,HARAYNA (INDIA) </a>
                 </address>
@@ -248,7 +248,7 @@
             </div>
         </div>
 
-        <div class="credit"> inspired <span> all rights </span> | reserved  2024</div>
+        <div class="credit">  <span> all rights </span> | reserved  2024</div>
     </section>
     <!-- footer section ends -->
 
