--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- header section starts -->
     <header class="header">
-        <a href="#" class="logo"><i class="fas fa-shopping-basket"></i> DMART </a>
+        <a href="#" class="logo"><i class="fas fa-shopping-basket"></i> M-MART </a>
 
         <nav class="navbar">
             <a href="#home">home</a>
