--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <section class="footer">
         <div class="box-container">
             <div class="box">
-                <h3>VBerg <i class="fas fa-shopping-basket"></i> </h3>
+                <h3>M-Mart <i class="fas fa-shopping-basket"></i> </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, quo?</p>
                 <div class="share">
                     <a href="#" class="fa-brands fa-square-facebook fa-xl" aria-label="Facebook"></a>
